--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h3>
 <a name="what-is-this" class="anchor" href="#what-is-this"><span class="octicon octicon-link"></span></a>What is this</h3>
 
-<p>This is the github project site for the interestingsoftwarestuff.com website. This is my personal site and will serve as a guinea pig for many of the technologies that make up the flourish-online system offered my my company - <a href="http://www.marketingwithgusto.com">Marketing With Gusto</a></p>
+<p>This is the github project site my personal website - a play within a play - the site about the site.
 
 <h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
